@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111207"
-#define public MagickPackageReleaseDate "snapshot-20111207"
+#define public MagickPackageVersionAddendum ".020111210"
+#define public MagickPackageReleaseDate "snapshot-20111210"
