@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x090600
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 9,6,0
-#define MagickChangeDate   "20111207"
-#define MagickReleaseDate  "snapshot-20111207"
+#define MagickChangeDate   "20111210"
+#define MagickReleaseDate  "snapshot-20111210"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
