@@ -1,3 +1,8 @@
+2011-12-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/effect.c (ConvolveImage): Special-case grayscale images
+	for better convolution performance.
+
 2011-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (BenchmarkUsage): -stepthreads now requires an
